Mon Aug 19 12:11:27 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin.c: prints absolute 0 dates as "[never]", print mod date
 	and by on one line, fix coredump on getprinc -terse

	* Makefile.in: add target for datetest

	* getdate.y: accept dates after 1999

Fri Aug 16 13:46:31 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin.c: update addprinc and modprinc usage

Thu Aug 15 20:56:13 1996  Tom Yu  <tlyu@mit.edu>

	* configure.in: remove check for -ldbm and -lndbm (old old
		garbage).

Mon Aug 12 20:20:11 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kadmin.1: Remove rename_principal. Add -maxrenewlife.

	* kadmin.c (kadmin_getprinc): Display the maximum renewable life
			field. 
		(kadmin_parse_princ_args): Add -maxrenwlife as a settable
			field. 

Mon Aug 12 11:47:31 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin_ct.ct: fix typo in add_principal

Sun Aug 11 16:29:27 1996  Barry Jaspan  <bjaspan@mit.edu>

	* keytab.c: reset static global "quiet" each time; don't print
 	whoami on normal status messages

Tue Aug  6 15:18:49 1996  Barry Jaspan  <bjaspan@mit.edu>

	* kadmin_ct.ct: get_{principals,policies} -> list_*; remove
 	rename_principal

	* kadmin.c: remove unsupported -salt option from ank usage

Fri Aug  2 13:13:24 1996  Barry Jaspan  <bjaspan@DUN-DUN-NOODLES>

	* keytab.c (add_principal): free_keyblock -> free_keyblock_contents

Wed Jul 31 14:20:50 1996  Tom Yu  <tlyu@mit.edu>

	* kadmin.c: Remove delcaration for getpwuid(); already declared in
		pwd.h.

Fri Jul 26 14:26:08 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* Makefile.in (install): Actually install kadmin.local.  (Or
 		rather, don't install kadmin.local as kadmin, and then
 		reinstall kadmin on top of kadmin.)

Wed Jul 24 00:27:59 1996  Sam Hartman  <hartmans@mit.edu>

	* configure.in: Don't replace setenv as it isn't used. 

Thu Jul 25 12:11:49 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* kadmin.c (quit): Return zero so that we return the proper exit
		status. 